# sharify-be

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  build.rs  docker-compose.yml
proto/: cmd.proto  role.proto  room.proto  spotify.proto
src/: discord.rs  main.rs  routes.rs
src/proto/: mod.rs
src/proto/impl/: mod.rs  role.rs  room.rs  spotify.rs
src/sharify/: mod.rs  role.rs  role_proto.rs  room.rs  room_manager.rs  room_metadata.rs  room_proto.rs  spotify.rs  spotify_web_utils.rs  utils.rs  websocket.rs  websocket_cmds.rs
src/sharify/spotify/: mod.rs  web_utils.rs
src/sharify/websocket/: commands.rs  instance.rs  mod.rs
src/tests/: mod.rs  unit.rs  websocket.rs
