[package]
name = "sharify-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.1"
actix-governor = "0.8.0"
actix-web = "4.11.0"
actix-ws = "0.3.0"
base64 = "0.22.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
prost = "0.14.1"
prost-types = "0.14.1"
rand = "0.9.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
urlencoding = "2.1.3"
uuid = { version = "1.17.0", features = ["v7", "serde"] }

[build-dependencies]
prost-build = "0.14.1"
